samples/_failures_safe/1761630586_88d4ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b12131.c: In function ‘main’:
./samples/SAFE/__tmp_43b12131.c:165:9: error: expected expression at end of input
  165 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_43b12131.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b12131.c:165:9: error: expected declaration or statement at end of input
